[gd_scene load_steps=7 format=3 uid="uid://djf2qpywab4qs"]

[ext_resource type="Script" path="res://Enemy1.gd" id="1_iksg7"]
[ext_resource type="PackedScene" uid="uid://cbbbl750eafyi" path="res://health_bar.tscn" id="2_hbpl7"]
[ext_resource type="PackedScene" uid="uid://cyuuikcle0cls" path="res://inventory/items/tool.tscn" id="2_map1b"]

[sub_resource type="CanvasTexture" id="CanvasTexture_cvgtm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s1bhn"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5cy1"]

[node name="Enemy1" type="Node2D"]
script = ExtResource("1_iksg7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_cvgtm")

[node name="Enemy_Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Detection"]
shape = SubResource("CircleShape2D_s1bhn")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_n5cy1")

[node name="Bludgeon" parent="." instance=ExtResource("2_map1b")]

[node name="Health_Bar" parent="." instance=ExtResource("2_hbpl7")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 15.0
offset_right = 25.0
offset_bottom = 20.0
grow_horizontal = 2

[connection signal="body_entered" from="Enemy_Detection" to="." method="_on_enemy_detection_body_entered"]
